# yt-summaries

./: .gitignore  Makefile  README.md  docker-compose.yml  install_phi3.sh  pyproject.toml  sample.env  setup_python.sh
data/: rag_retrieval.pkl  results_temp0.pkl  yt_videos_details.pkl
notebooks/: exploration.ipynb  generate_ground_truth.ipynb  retrieval_eval.ipynb
src/db/: __init__.py  handler.py
src/grafana/: dashboard.json  init.py
src/yt_info/: streamlit_app.py  yt_video_data.py
src/yt_rag/: agent.py  build_index.py  streamlit_app.py
tests/: test_yt_video_data.py
