[tool.poetry]
name = "yt-summaries"
version = "0.1.0"
description = ""
authors = ["psousasa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.142.0"
youtube-transcript-api = "^0.6.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
